maj achats parrain

--- a/autres.html
+++ b/autres.html
@@ -226,20 +226,23 @@
       <figcaption>
         7,50€
       </figcaption>
+    </figure>
 
-      <!--Autres 15
+    <!--Autres 15-->
     <figure>
-      <a href="https://www.boutiquezerator.com/product-page/mug-zerator" target="_blank"> <img
-          src="https://static.wixstatic.com/media/f9fe86_c1b2b957e346405ab7120a906830da44~mv2.jpg/v1/fill/w_498,h_664,al_c,q_85,usm_0.66_1.00_0.01/f9fe86_c1b2b957e346405ab7120a906830da44~mv2.webp" alt="Mug Zerator" class="others" /></a>
+      <a href="https://www.designbyhumans.com/shop/mug/logo-mug/887902/" target="_blank"> <img src="https://cdn.designbyhumans.com/product_images/p/887902.1633.b5d41S7ay1Cm2MjUBAA-650x650-b-p.png" alt="Mug Lupo" class="others" /></a>
       <figcaption>
-        Mug Zerator
+        Mug Dr Lupo
       </figcaption>
       <figcaption>
-        19,90€
+        15,00$
       </figcaption>
-    </figure>-->
+      <figcaption>
+        Voir si payement en euro
+      </figcaption>
+    </figure>
 
-      <!--Autres 16
+    <!--Autres 16
     <figure>
       <a href="https://www.amazon.fr/Dernier-rempart-Arnold-Schwarzenegger/dp/B00B9G1D9Q/ref=tmm_dvd_title_0?_encoding=UTF8&amp;qid=&amp;sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/712f9-DHLoL._SL1372_.jpg"
           alt="Le Dernier Rempart" class="others" /></a>
