--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -54,31 +54,25 @@
 
     <!--Jeu 3-->
     <figure>
-      <a href="https://www.amazon.fr/Sony-Days-Gone/dp/B07MWXG7QV/ref=pd_sbs_63_5/257-1218540-6150940?_encoding=UTF8&pd_rd_i=B07MWXG7QV&pd_rd_r=6034b639-6d27-11e9-b7ed-b1ecbd8ebec9&pd_rd_w=9QfFb&pd_rd_wg=jHvSS&pf_rd_p=ce0bf35d-908d-4dcb-a083-3a6e21394b79&pf_rd_r=5J97VAA2ZG5TABRB0ZK5&psc=1&refRID=5J97VAA2ZG5TABRB0ZK5"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71m2fi%2BfmHL._SL1000_.jpg" alt="Days Gone" class="game" /></a>
+      <a href="#" target="_blank"> <img src="https://2kgamer.com/uploads/default/original/3X/5/e/5e2b945713b6e14200d2d1455010592ff191e062.jpeg" alt="NBA 2K20" class="game" /></a>
       <figcaption>
-        Days Gone
+        NBA 2K20 - Edition Legende
       </figcaption>
       <figcaption>
-        53,30€ sur Amazon
-      </figcaption>
-      <figcaption>
-        69,99€ sur PlayStation
+        99,99€ sur PlayStation
       </figcaption>
     </figure>
 
+
     <!--Jeu 4-->
     <figure>
-      <a href="https://www.amazon.fr/Rockstar-Games-Red-Dead-Redemption/dp/B01M7RRZ8D/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1UEGKRDHHI4WP&keywords=red+dead+r%C3%A9demption+2&qid=1554820390&s=videogames&sprefix=red+de%2Cvideogames%2C137&sr=1-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vMMnIlVBL._SL1000_.jpg" alt="Red Dead Redemption 2" class="game" /></a>
+      <a href="https://www.amazon.fr/Codemasters-F1-2019-EDITION-LEGENDES/dp/B07RCV5T9R/ref=cm_cr_arp_d_product_top?ie=UTF8" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61Gw-F-rCIL._SL1000_.jpg" alt="F1 2019"
+          class="game" /></a>
       <figcaption>
-        Red Dead Redemption 2
+        F1 2019 - Edition Légendes
       </figcaption>
       <figcaption>
-        29,99€ sur Amazon
-      </figcaption>
-      <figcaption>
-        69,99€ sur PlayStation
+        70,90€ sur Amazon
       </figcaption>
     </figure>
   </div>
@@ -101,16 +95,15 @@
 
     <!--Jeu 6-->
     <figure>
-      <a href="https://www.amazon.fr/Sony-0711719357773-God-Of-War/dp/B01H1M8FK6/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=2K4IQPGYVAE0N&keywords=god+of+war+4+ps4&qid=1554820419&s=videogames&sprefix=god+of+wa%2Cvideogames%2C139&sr=1-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81JZ-87%2BM7L._AC_SL1500_.jpg" alt="God Of War" class="game" /></a>
+      <a href="#" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71qbzh%2BrMJL._SL1000_.jpg" alt="Crash Team Racing Nitro-Fueled" class="game" /></a>
       <figcaption>
-        God Of War
+        Crash Team Racing Edition Nitros Oxyde
       </figcaption>
       <figcaption>
-        36,99€ sur Amazon
+        Edition Nitros Oxyde
       </figcaption>
       <figcaption>
-        69,99€ sur PlayStation
+        59,99€ sur PlayStation
       </figcaption>
     </figure>
 
@@ -159,7 +152,7 @@
       </figcaption>
     </figure>
 
-    <!--Jeu 10-->
+    <!--Jeu 10
     <figure>
       <a href="#" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71qbzh%2BrMJL._SL1000_.jpg" alt="Crash Team Racing Nitro-Fueled" class="game" /></a>
       <figcaption>
@@ -171,32 +164,35 @@
       <figcaption>
         59,99€ sur PlayStation
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Jeu 11-->
-  <figure>
-    <a href="https://www.amazon.fr/Codemasters-F1-2019-EDITION-LEGENDES/dp/B07RCV5T9R/ref=cm_cr_arp_d_product_top?ie=UTF8" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61Gw-F-rCIL._SL1000_.jpg" alt="F1 2019" class="game" /></a>
-    <figcaption>
-      F1 2019 - Edition Légendes
-    </figcaption>
-    <figcaption>
-      70,90€ sur Amazon
-    </figcaption>
-  </figure>
+    <!--Jeu 11
+    <figure>
+      <a href="https://www.amazon.fr/Codemasters-F1-2019-EDITION-LEGENDES/dp/B07RCV5T9R/ref=cm_cr_arp_d_product_top?ie=UTF8" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61Gw-F-rCIL._SL1000_.jpg" alt="F1 2019"
+          class="game" /></a>
+      <figcaption>
+        F1 2019 - Edition Légendes
+      </figcaption>
+      <figcaption>
+        70,90€ sur Amazon
+      </figcaption>
+    </figure>-->
 
     <!--Jeu 12
-  <figure>
-    <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
-    <figcaption>
-      Just cause 4
-    </figcaption>
-    <figcaption>
-      28,97€
-    </figcaption>
-  </figure>
+    <figure>
+      <a href="#" target="_blank"> <img
+          src="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwijlfSg9JPjAhXSLVAKHeA8BHAQjRx6BAgBEAU&url=https%3A%2F%2F2kgamer.com%2Ft%2Fwho-do-you-think-will-be-the-nba-2k20-cover-athlete%2F45722%3Fpage%3D2&psig=AOvVaw3QDBpeCAuvrOn-ofckaKga&ust=1562076940391318"
+          alt="NBA 2K20" class="game" /></a>
+      <figcaption>
+        NBA 2K20 - Edition Legende
+      </figcaption>
+      <figcaption>
+        99,99€ sur PlayStation
+      </figcaption>
+    </figure>-->
   </div>
--->
-    <!--  <div class="gamesLine">
+
+  <!--  <div class="gamesLine">
 Jeu 13
 <figure>
   <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
@@ -208,7 +204,7 @@ Jeu 13
   </figcaption>
 </figure>
 -->
-    <!--Jeu 14
+  <!--Jeu 14
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -219,7 +215,7 @@ Jeu 13
     </figcaption>
   </figure>
 -->
-    <!--Jeu 15
+  <!--Jeu 15
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -230,7 +226,7 @@ Jeu 13
     </figcaption>
   </figure>
 -->
-    <!--Jeu 16
+  <!--Jeu 16
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -242,8 +238,8 @@ Jeu 13
   </figure>
   </div>
 -->
-    <!--<div class="gamesLine">-->
-    <!--Jeu 17
+  <!--<div class="gamesLine">-->
+  <!--Jeu 17
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -254,7 +250,7 @@ Jeu 13
     </figcaption>
   </figure>
 -->
-    <!--Jeu 18
+  <!--Jeu 18
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -266,7 +262,7 @@ Jeu 13
   </figure>
   -->
 
-    <!--Jeu 19
+  <!--Jeu 19
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -277,7 +273,7 @@ Jeu 13
     </figcaption>
   </figure>
 -->
-    <!--Jeu 20
+  <!--Jeu 20
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -290,8 +286,8 @@ Jeu 13
   </div>
 -->
 
-    <!--<div class="gamesLine">-->
-    <!--Jeu 21
+  <!--<div class="gamesLine">-->
+  <!--Jeu 21
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -302,7 +298,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-    <!--Jeu 22
+  <!--Jeu 22
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -314,7 +310,7 @@ Jeu 13
 </figure>
 -->
 
-    <!--Jeu 23
+  <!--Jeu 23
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -325,7 +321,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-    <!--Jeu 24
+  <!--Jeu 24
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -338,8 +334,8 @@ Jeu 13
 </div>
 -->
 
-    <!--<div class="gamesLine">-->
-    <!--Jeu 25
+  <!--<div class="gamesLine">-->
+  <!--Jeu 25
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -350,7 +346,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-    <!--Jeu 26
+  <!--Jeu 26
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -362,7 +358,7 @@ Jeu 13
 </figure>
 -->
 
-    <!--Jeu 27
+  <!--Jeu 27
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -373,7 +369,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-    <!--Jeu 28
+  <!--Jeu 28
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -386,8 +382,8 @@ Jeu 13
 </div>
 -->
 
-    <!--<div class="gamesLine">-->
-    <!--Jeu 29
+  <!--<div class="gamesLine">-->
+  <!--Jeu 29
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -398,7 +394,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-    <!--Jeu 30
+  <!--Jeu 30
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -410,7 +406,7 @@ Jeu 13
 </figure>
 -->
 
-    <!--Jeu 31
+  <!--Jeu 31
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -421,7 +417,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-    <!--Jeu 32
+  <!--Jeu 32
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -434,8 +430,8 @@ Jeu 13
 </div>
 -->
 
-    <!--<div class="gamesLine">-->
-    <!--Jeu 33
+  <!--<div class="gamesLine">-->
+  <!--Jeu 33
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -446,7 +442,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-    <!--Jeu 34
+  <!--Jeu 34
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -458,7 +454,7 @@ Jeu 13
 </figure>
 -->
 
-    <!--Jeu 35
+  <!--Jeu 35
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -469,7 +465,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-    <!--Jeu 36
+  <!--Jeu 36
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -482,8 +478,8 @@ Jeu 13
 </div>
 -->
 
-    <!--<div class="gamesLine">-->
-    <!--Jeu 37
+  <!--<div class="gamesLine">-->
+  <!--Jeu 37
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -494,7 +490,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-    <!--Jeu 38
+  <!--Jeu 38
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -506,7 +502,7 @@ Jeu 13
 </figure>
 -->
 
-    <!--Jeu 39
+  <!--Jeu 39
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -517,7 +513,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-    <!--Jeu 40
+  <!--Jeu 40
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
