--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -21,50 +21,7 @@
   </navbar>
 
   <div class="gamesLine">
-    <!--Jeu 1-->
-    <figure>
-      <a href="#" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81rn%2BBE85JL._AC_SL1500_.jpg" alt="CoD MW" class="game" /></a>
-      <figcaption>
-        CoD : Modern Warfare
-      </figcaption>
-      <figcaption>
-        Précommande
-      </figcaption>
-      <figcaption>
-        69,99€ sur PlayStation
-      </figcaption>
-      <figcaption>
-        Sortie le 25/10/19
-      </figcaption>
-    </figure>
-
-    <!--Jeu 2-->
-    <figure>
-      <a href="#" target="_blank"> <img src="https://pbs.twimg.com/profile_images/1136648305474179073/8fmdPhys_400x400.png" alt="Fifa 20" class="game" /></a>
-      <figcaption>
-        FIFA 20
-      </figcaption>
-      <figcaption>
-        Précommande sur PlayStation
-      </figcaption>
-      <figcaption>
-        69,99€
-      </figcaption>
-    </figure>
-
-    <!--Jeu 3-->
-    <figure>
-      <a href="#" target="_blank"> <img src="https://2kgamer.com/uploads/default/original/3X/5/e/5e2b945713b6e14200d2d1455010592ff191e062.jpeg" alt="NBA 2K20" class="game" /></a>
-      <figcaption>
-        NBA 2K20 - Edition Legende
-      </figcaption>
-      <figcaption>
-        99,99€ sur PlayStation
-      </figcaption>
-    </figure>
-
-
-    <!--Jeu 4-->
+    <!--Jeu 1
     <figure>
       <a href="https://www.amazon.fr/Codemasters-F1-2019-EDITION-LEGENDES/dp/B07RCV5T9R/ref=cm_cr_arp_d_product_top?ie=UTF8" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61Gw-F-rCIL._SL1000_.jpg" alt="F1 2019"
           class="game" /></a>
@@ -74,11 +31,23 @@
       <figcaption>
         70,90€ sur Amazon
       </figcaption>
-    </figure>
-  </div>
+    </figure>-->
 
-  <div class="gamesLine">
-    <!--Jeu 5-->
+    <!--Jeu 2
+    <figure>
+      <a href="#" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71qbzh%2BrMJL._SL1000_.jpg" alt="Crash Team Racing Nitro-Fueled" class="game" /></a>
+      <figcaption>
+        Crash Team Racing Edition Nitros Oxyde
+      </figcaption>
+      <figcaption>
+        Edition Nitros Oxyde
+      </figcaption>
+      <figcaption>
+        59,99€ sur PlayStation
+      </figcaption>
+    </figure>-->
+
+    <!--Jeu 3
     <figure>
       <a href="https://www.amazon.fr/Shadow-of-the-Tomb-Raider/dp/B07H9W8CPC/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1C97HT7NS6MQB&keywords=shadow+of+the+tomb+raider+ps4&qid=1554820457&s=videogames&sprefix=shadow%2Cvideogames%2C138&sr=1-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71XoFWzXBBL._SL1492_.jpg" alt="Shadow of the Tomb Raider" class="game" /></a>
@@ -91,23 +60,9 @@
       <figcaption>
         69,99€ sur PlayStation
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Jeu 6-->
-    <figure>
-      <a href="#" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71qbzh%2BrMJL._SL1000_.jpg" alt="Crash Team Racing Nitro-Fueled" class="game" /></a>
-      <figcaption>
-        Crash Team Racing Edition Nitros Oxyde
-      </figcaption>
-      <figcaption>
-        Edition Nitros Oxyde
-      </figcaption>
-      <figcaption>
-        59,99€ sur PlayStation
-      </figcaption>
-    </figure>
-
-    <!--Jeu 7-->
+    <!--Jeu 4
     <figure>
       <a href="#" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81XMP8j9ZxL._SL1500_.jpg" alt="Life is Strange 2" class="game" /></a>
       <figcaption>
@@ -117,8 +72,57 @@
         39,99€ sur PlayStation
       </figcaption>
     </figure>
+  </div>-->
 
-    <!--Jeu 8-->
+  <div class="gamesLine">
+    <!--Jeu 5
+    <figure>
+      <a href="#" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71deJ-FfN2L._AC_SL1500_.jpg" alt="Death Stranding" class="game" /></a>
+      <figcaption>
+        Death Stranding
+      </figcaption>
+      <figcaption>
+        Précommande
+      </figcaption>
+      <figcaption>
+        69,99€ sur PlayStation
+      </figcaption>
+      <figcaption>
+        Sortie le 08/11/19
+      </figcaption>
+    </figure>-->
+
+    <!--Jeu 6
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-SQEA27-UK-22ST-Just-Cause/dp/B07DNY1KPK/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=just+cause+4&qid=1556021586&s=videogames&sr=1-2" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        26,49€ sur Amazon
+      </figcaption>
+      <figcaption>
+        69,99€ sur PlayStation
+      </figcaption>
+    </figure>-->
+
+    <!--Jeu 7
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-SQEA27-UK-22ST-Just-Cause/dp/B07DNY1KPK/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=just+cause+4&qid=1556021586&s=videogames&sr=1-2" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        26,49€ sur Amazon
+      </figcaption>
+      <figcaption>
+        69,99€ sur PlayStation
+      </figcaption>
+    </figure>-->
+
+    <!--Jeu 8
     <figure>
       <a href="#" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71deJ-FfN2L._AC_SL1500_.jpg" alt="Death Stranding" class="game" /></a>
       <figcaption>
@@ -134,10 +138,10 @@
         Sortie le 08/11/19
       </figcaption>
     </figure>
-  </div>
+  </div>-->
 
   <div class="gamesLine">
-    <!--Jeu 9-->
+    <!--Jeu 9
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-SQEA27-UK-22ST-Just-Cause/dp/B07DNY1KPK/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=just+cause+4&qid=1556021586&s=videogames&sr=1-2" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
@@ -150,7 +154,7 @@
       <figcaption>
         69,99€ sur PlayStation
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Jeu 10
     <figure>
