--- a/autres.html
+++ b/autres.html
@@ -21,15 +21,12 @@
   </navbar>
 
   <div class="othersLine">
-    <!--Autres 1
+    <!--Autres 1-->
     <figure>
-      <a href="https://shop.vitality.gg/products/copie-de-maillot-officiel-team-vitality-floque?variant=29051376959606" target="_blank"> <img src="https://cdn.shopify.com/s/files/1/0049/2293/3366/products/FR_Face_1024x1024.png?v=1560698170"
+      <a href="https://shop.vitality.gg/products/maillot-officiel-team-vitality-floque?variant=29379536879734" target="_blank"> <img src="https://cdn.shopify.com/s/files/1/0049/2293/3366/products/Site-Front_0dd604c2-62ca-4305-85bb-58573be32e43_600x800.png?v=1562489356"
           alt="Vitality" class="others" /></a>
       <figcaption>
-        Maillot Vitality blanc
-      </figcaption>
-      <figcaption>
-        N'est plus disponible
+        Maillot Vitality
       </figcaption>
       <figcaption>
         XXL
@@ -40,9 +37,9 @@
       <figcaption>
         79,99€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Autres 2
+    <!--Autres 2-->
     <figure>
       <a href="https://shop.vitality.gg/products/casquette-team-vitality-1" target="_blank"> <img src="https://cdn.shopify.com/s/files/1/0049/2293/3366/products/2019-casquette-02_600x800.jpg?v=1550850258" alt="Casquette Vitality"
           class="others" /></a>
@@ -52,9 +49,9 @@
       <figcaption>
         17,50€ (PROMOTION)
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Autres 3
+    <!--Autres 3-->
     <figure>
       <a href="https://shop.vitality.gg/products/porte-cles-team-vitality" target="_blank"> <img src="https://cdn.shopify.com/s/files/1/0049/2293/3366/products/portecle_600x800.jpg?v=1540291632" alt="Porte Clé Vitality" class="others" /></a>
       <figcaption>
@@ -63,9 +60,9 @@
       <figcaption>
         8,99€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Autres 4
+    <!--Autres 4-->
     <figure>
       <a href="https://shop.gotaga.tv/collections/accessoires/products/snapback-dark" target="_blank"> <img src="https://cdn.shopify.com/s/files/1/0045/8230/9955/products/Copie_de_Copie_de_Copie_de_DSC01555_2048x2048.jpg?v=1549309086"
           alt="Casquette Gotaga" class="others" /></a>
@@ -79,10 +76,10 @@
         25,00€
       </figcaption>
     </figure>
-  </div>-->
+  </div>
 
   <div class="othersLine">
-    <!--Autres 5
+    <!--Autres 5-->
     <figure>
       <a href="https://www.amazon.fr/Esprits-criminels-Saison-Joe-Mantegna/dp/B07HSLVBVC/ref=zg_bs_409468_27?_encoding=UTF8&psc=1&refRID=5RWEYV0XDWDRY795M84Q" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/61AQaz9ykmL._SL1000_.jpg" alt="Esprit Criminels - Saison 13" class="others" /></a>
@@ -90,14 +87,14 @@
         Esprits Criminels
       </figcaption>
       <figcaption>
-        L'intégrale de la saison 16
+        L'intégrale de la saison 13
       </figcaption>
       <figcaption>
-        23,66€
+        19,99€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Autres 6
+    <!--Autres 6-->
     <figure>
       <a href="https://www.amazon.fr/Friends-lInt%C3%A9grale-Saisons-Coffret-Blu-Ray/dp/B008HQCPCU/ref=cm_cr_arp_d_product_top?ie=UTF8" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/919CzxAoKRL._SL1500_.jpg"
           alt="Friends - L'intégrale" class="others" /></a>
@@ -110,9 +107,9 @@
       <figcaption>
         53,99€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Autres 7
+    <!--Autres 7-->
     <figure>
       <a href="https://cheh-moman.niceshop.co/product/Accessoires/Mug/Mug-China-Number-One/5cb49c34839e400010e596d7" target="_blank"> <img src="https://s3.eu-central-1.amazonaws.com/balibart-s3/Products/5cb49c34839e400010e596d7/Mockups/custom.png"
           alt="Tasse Moman" class="others" /></a>
@@ -122,9 +119,9 @@
       <figcaption>
         14,99€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Autres 8
+    <!--Autres 8-->
     <figure>
       <a href="https://www.amazon.fr/Heures-sombres-Blu-ray-Digital/dp/B07995WLYK/ref=tmm_blu_title_0?_encoding=UTF8&amp;qid=&amp;sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71XjGQ9iIVL._SL1290_.jpg"
           alt="Les Heures Sombres" class="others" /></a>
@@ -138,10 +135,10 @@
         11,98€
       </figcaption>
     </figure>
-  </div>-->
+  </div>
 
   <div class="othersLine">
-    <!--Autres 9
+    <!--Autres 9-->
     <figure>
       <a href="https://www.amazon.fr/Aftermath-Blu-ray-Arnold-Schwarzenegger/dp/B071CR98FB/ref=tmm_blu_title_1?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61VMloCcolL._SL1000_.jpg"
           alt="Aftermath" class="others" /></a>
@@ -154,9 +151,9 @@
       <figcaption>
         10,80€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Autres 10
+    <!--Autres 10-->
     <figure>
       <a href="https://www.amazon.fr/Killing-Gunther-Blu-ray-Arnold-Schwarzenegger/dp/B079PCBC6L/ref=tmm_blu_title_0?_encoding=UTF8&qid=&sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/716SpSmGxBL._SL1000_.jpg"
           alt="Les Heures Sombres" class="others" /></a>
@@ -169,9 +166,9 @@
       <figcaption>
         10,99€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Autres 11
+    <!--Autres 11-->
     <figure>
       <a href="https://www.amazon.fr/Monopoly-societe-Thrones-Collector-fran%C3%A7aise/dp/B07MV1NS8Z/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=3LRZVONKUAQH0&keywords=game+of+thrones+monopoly&qid=1558896777&s=gateway&sprefix=game+of+thrones+mo%2Caps%2C139&sr=8-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81gMNMqzTmL._SL1500_.jpg" alt="Monopoly GoT" class="others" /></a>
@@ -181,9 +178,9 @@
       <figcaption>
         34,99€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Autres 12
+    <!--Autres 12-->
     <figure>
       <a href="https://shop.wwe.com/alexa-bliss-twisted-bliss-coffee-mug/116302345.html?dwvar_116302345_color=White#start=4" target="_blank"> <img
           src="https://shop.wwe.com/on/demandware.static/-/Sites-main/default/dw88bc650a/images/large/e6ec192d2dccb8461b0ee59381ffbde7mockup-61c99c26.jpg" alt="Mug Alexa Bliss" class="others" /></a>
@@ -196,12 +193,12 @@
       <figcaption>
         wwe.com (USA)
       </figcaption>
-    </figure>-->
+    </figure>
 
   </div>
 
   <div class="othersLine">
-    <!--Autres 13
+    <!--Autres 13-->
     <figure>
       <a href="https://www.boutiquezerator.com/product-page/mug-zerator" target="_blank"> <img
           src="https://static.wixstatic.com/media/f9fe86_c1b2b957e346405ab7120a906830da44~mv2.jpg/v1/fill/w_498,h_664,al_c,q_85,usm_0.66_1.00_0.01/f9fe86_c1b2b957e346405ab7120a906830da44~mv2.webp" alt="Mug Zerator" class="others" /></a>
@@ -211,9 +208,9 @@
       <figcaption>
         19,90€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Autres 14
+    <!--Autres 14-->
     <figure>
       <a href="https://www.amazon.fr/Dernier-rempart-Arnold-Schwarzenegger/dp/B00B9G1D9Q/ref=tmm_dvd_title_0?_encoding=UTF8&amp;qid=&amp;sr=" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/712f9-DHLoL._SL1372_.jpg"
           alt="Le Dernier Rempart" class="others" /></a>
@@ -226,9 +223,9 @@
       <figcaption>
         7,50€
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Autres 15
+    <!--Autres 15-->
     <figure>
       <a href="https://www.designbyhumans.com/shop/mug/logo-mug/887902/" target="_blank"> <img src="https://cdn.designbyhumans.com/product_images/p/887902.1633.b5d41S7ay1Cm2MjUBAA-650x650-b-p.png" alt="Mug Lupo" class="others" /></a>
       <figcaption>
@@ -240,7 +237,7 @@
       <figcaption>
         Voir si payement en euro
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Autres 16
     <figure>
