--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -21,7 +21,7 @@
   </navbar>
 
   <div class="gamesLine">
-    <!--Jeu 1
+    <!--Jeu 1-->
     <figure>
       <a href="https://www.amazon.fr/Codemasters-F1-2019-EDITION-LEGENDES/dp/B07RCV5T9R/ref=cm_cr_arp_d_product_top?ie=UTF8" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61Gw-F-rCIL._SL1000_.jpg" alt="F1 2019"
           class="game" /></a>
@@ -31,9 +31,9 @@
       <figcaption>
         70,90€ sur Amazon
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Jeu 2
+    <!--Jeu 2-->
     <figure>
       <a href="#" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71qbzh%2BrMJL._SL1000_.jpg" alt="Crash Team Racing Nitro-Fueled" class="game" /></a>
       <figcaption>
@@ -45,9 +45,9 @@
       <figcaption>
         59,99€ sur PlayStation
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Jeu 3
+    <!--Jeu 3-->
     <figure>
       <a href="https://www.amazon.fr/Shadow-of-the-Tomb-Raider/dp/B07H9W8CPC/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1C97HT7NS6MQB&keywords=shadow+of+the+tomb+raider+ps4&qid=1554820457&s=videogames&sprefix=shadow%2Cvideogames%2C138&sr=1-1"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71XoFWzXBBL._SL1492_.jpg" alt="Shadow of the Tomb Raider" class="game" /></a>
@@ -60,9 +60,9 @@
       <figcaption>
         69,99€ sur PlayStation
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Jeu 4
+    <!--Jeu 4-->
     <figure>
       <a href="#" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81XMP8j9ZxL._SL1500_.jpg" alt="Life is Strange 2" class="game" /></a>
       <figcaption>
@@ -72,10 +72,10 @@
         39,99€ sur PlayStation
       </figcaption>
     </figure>
-  </div>-->
+  </div>
 
   <div class="gamesLine">
-    <!--Jeu 5
+    <!--Jeu 5-->
     <figure>
       <a href="#" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71deJ-FfN2L._AC_SL1500_.jpg" alt="Death Stranding" class="game" /></a>
       <figcaption>
@@ -90,9 +90,9 @@
       <figcaption>
         Sortie le 08/11/19
       </figcaption>
-    </figure>-->
+    </figure>
 
-    <!--Jeu 6
+    <!--Jeu 6-->
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-SQEA27-UK-22ST-Just-Cause/dp/B07DNY1KPK/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=just+cause+4&qid=1556021586&s=videogames&sr=1-2" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
@@ -105,7 +105,7 @@
       <figcaption>
         69,99€ sur PlayStation
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Jeu 7
     <figure>
