--- a/autres.html
+++ b/autres.html
@@ -23,8 +23,8 @@
   <div class="othersLine">
     <!--Autres 1-->
     <figure>
-      <a href="https://shop.vitality.gg/products/maillot-officiel-team-vitality-floque?variant=29379536879734" target="_blank"> <img src="https://cdn.shopify.com/s/files/1/0049/2293/3366/products/Site-Front_0dd604c2-62ca-4305-85bb-58573be32e43_600x800.png?v=1562489356"
-          alt="Vitality" class="others" /></a>
+      <a href="https://shop.vitality.gg/products/maillot-officiel-team-vitality-floque?variant=29379536879734" target="_blank"> <img
+          src="https://cdn.shopify.com/s/files/1/0049/2293/3366/products/Site-Front_0dd604c2-62ca-4305-85bb-58573be32e43_600x800.png?v=1562489356" alt="Vitality" class="others" /></a>
       <figcaption>
         Maillot Vitality
       </figcaption>
@@ -81,16 +81,15 @@
   <div class="othersLine">
     <!--Autres 5-->
     <figure>
-      <a href="https://www.amazon.fr/Esprits-criminels-Saison-Joe-Mantegna/dp/B07HSLVBVC/ref=zg_bs_409468_27?_encoding=UTF8&psc=1&refRID=5RWEYV0XDWDRY795M84Q" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/61AQaz9ykmL._SL1000_.jpg" alt="Esprit Criminels - Saison 13" class="others" /></a>
+      <a href="https://www.designbyhumans.com/shop/mug/logo-mug/887902/" target="_blank"> <img src="https://cdn.designbyhumans.com/product_images/p/887902.1633.b5d41S7ay1Cm2MjUBAA-650x650-b-p.png" alt="Mug Lupo" class="others" /></a>
       <figcaption>
-        Esprits Criminels
+        Mug Dr Lupo
       </figcaption>
       <figcaption>
-        L'intégrale de la saison 13
+        15,00$
       </figcaption>
       <figcaption>
-        19,99€
+        Voir si payement en euro
       </figcaption>
     </figure>
 
@@ -225,7 +224,7 @@
       </figcaption>
     </figure>
 
-    <!--Autres 15-->
+    <!--Autres 15
     <figure>
       <a href="https://www.designbyhumans.com/shop/mug/logo-mug/887902/" target="_blank"> <img src="https://cdn.designbyhumans.com/product_images/p/887902.1633.b5d41S7ay1Cm2MjUBAA-650x650-b-p.png" alt="Mug Lupo" class="others" /></a>
       <figcaption>
@@ -237,7 +236,7 @@
       <figcaption>
         Voir si payement en euro
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Autres 16
     <figure>
