--- a/livres.html
+++ b/livres.html
@@ -23,46 +23,46 @@
   <div class="booksLine">
     <!--Livre 1-->
     <figure>
-      <a href="https://www.amazon.fr/Petite-femelle-Philippe-Jaenada/dp/2757860402/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=1MLZT24F87TEG&keywords=philippe+jaenada+la+petite+femelle&qid=1555280712&s=gateway&sprefix=philippe+jaenada+%2Cvideogames%2C134&sr=8-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71tFlCSkYIL.jpg" alt="La Petite Femelle" class="books" /></a>
+      <a href="https://www.amazon.fr/Soci%C3%A9t%C3%A9-du-Spectacle-Guy-Debord/dp/2072779405/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1561844645&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/812Cxn-3VgL.jpg"
+          alt="La Société du Spectacle" class="books" /></a>
       <figcaption>
-        Philippe Jaenada
+        Guy Debord
       </figcaption>
       <figcaption>
-        La Petite Femelle
+        La Société du Spectacle
       </figcaption>
       <figcaption>
-        9,10€
+        6,80€
       </figcaption>
     </figure>
 
     <!--Livre 2-->
     <figure>
-      <a href="https://www.amazon.fr/Devenir-Michelle-Obama/dp/2213706115?ref_=Oct_MGiftedC_301061_4&pf_rd_r=1CJP6BYNGKZ9VTCP6DM6&pf_rd_p=e5b0b4bf-eca8-52d1-8616-3e2c263b1a1e&pf_rd_s=merchandised-search-8&pf_rd_t=101&pf_rd_i=301061&pf_rd_m=A1X6FK5RDHNB96"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81%2BNKIcEM-L.jpg" alt="Michelle Obama" class="books" /></a>
+      <a href="https://www.amazon.fr/Passions-Nicolas-Sarkozy/dp/B07S253JD9/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1561498848&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71lrITkBVML.jpg" alt="Passions"
+          class="books" /></a>
       <figcaption>
-        Michelle Obama
+        Nicolas Sarkozy
       </figcaption>
       <figcaption>
-        Devenir
+        Passions
       </figcaption>
       <figcaption>
-        24,50€
+        19,50€
       </figcaption>
     </figure>
 
     <!--Livre 3-->
     <figure>
-      <a href="https://www.amazon.fr/Lettres-%C3%A0-Antonine-Nicolas-Rey/dp/B07BSLN74V/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=nicolas+rey&qid=1555280726&s=gateway&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/41lwCr9Qd%2BL.jpg" alt="Lettres à Joséphine" class="books" /></a>
+      <a href="https://www.amazon.fr/supplication-Tchernobyl-chronique-monde-lapocalypse/dp/2290135992/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1559840715&sr=8-1" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/61t%2BKsLr53L.jpg" alt="La supplication" class="books" /></a>
       <figcaption>
-        Nicolas Rey
+        Svetlana Alexievitch
       </figcaption>
       <figcaption>
-        Lettres à Joséphine
+        La supplication
       </figcaption>
       <figcaption>
-        18,00€
+        6,30€
       </figcaption>
     </figure>
 
@@ -676,16 +676,16 @@
   <div class="booksLine">
     <!--Livre 41-->
     <figure>
-      <a href="https://www.amazon.fr/supplication-Tchernobyl-chronique-monde-lapocalypse/dp/2290135992/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1559840715&sr=8-1" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/61t%2BKsLr53L.jpg" alt="La supplication" class="books" /></a>
+      <a href="https://www.amazon.fr/Diams-autobiographie-Melanie-Georgiades/dp/2757835661/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1560875298&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51I%2BiF81yIL.jpg"
+          alt="Diam's, autobiographie" class="books" /></a>
       <figcaption>
-        Svetlana Alexievitch
+        Mélanie Georgiades
       </figcaption>
       <figcaption>
-        La supplication
+        Diam's, autobiographie
       </figcaption>
       <figcaption>
-        6,30€
+        7,30€
       </figcaption>
     </figure>
 
@@ -704,7 +704,7 @@
       </figcaption>
     </figure>
 
-    <!--Livre 43-->
+    <!--Livre 43
     <figure>
       <a href="https://www.amazon.fr/Diams-autobiographie-Melanie-Georgiades/dp/2757835661/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1560875298&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/51I%2BiF81yIL.jpg"
           alt="Diam's, autobiographie" class="books" /></a>
@@ -717,9 +717,9 @@
       <figcaption>
         7,30€
       </figcaption>
-    </figure>
+    </figure>-->
 
-    <!--Livre 44-->
+    <!--Livre 44
     <figure>
       <a href="https://www.amazon.fr/Passions-Nicolas-Sarkozy/dp/B07S253JD9/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1561498848&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71lrITkBVML.jpg" alt="Passions"
           class="books" /></a>
@@ -732,12 +732,12 @@
       <figcaption>
         19,50€
       </figcaption>
-    </figure>
+    </figure>-->
   </div>
 
 
   <div class="booksLine">
-    <!--Livre 45-->
+    <!--Livre 45
     <figure>
       <a href="https://www.amazon.fr/Soci%C3%A9t%C3%A9-du-Spectacle-Guy-Debord/dp/2072779405/ref=tmm_mmp_swatch_0?_encoding=UTF8&qid=1561844645&sr=8-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/812Cxn-3VgL.jpg"
           alt="La Société du Spectacle" class="books" /></a>
@@ -750,7 +750,7 @@
       <figcaption>
         6,80€
       </figcaption>
-    </figure>
+    </figure>-->
 
 
     <!--Livre 46
@@ -796,10 +796,10 @@
       19,00€
     </figcaption>
   </figure>-->
-</div>
+  </div>
 
 
-    <!--  <div class="booksLine">
+  <!--  <div class="booksLine">
 Livre 49
   <figure>
     <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
@@ -816,7 +816,7 @@ Livre 49
   </figure>
   -->
 
-    <!--Livre 50
+  <!--Livre 50
   <figure>
     <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
     <figcaption>
@@ -831,7 +831,7 @@ Livre 49
   </figure>
   -->
 
-    <!--Livre 51
+  <!--Livre 51
   <figure>
     <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
     <figcaption>
@@ -846,7 +846,7 @@ Livre 49
   </figure>
 -->
 
-    <!--Livre 52
+  <!--Livre 52
   <figure>
     <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
     <figcaption>
@@ -862,7 +862,7 @@ Livre 49
 </div>
 -->
 
-    <!--  <div class="booksLine">
+  <!--  <div class="booksLine">
 Livre 53
   <figure>
     <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
@@ -879,7 +879,7 @@ Livre 53
   </figure>
   -->
 
-    <!--Livre 54
+  <!--Livre 54
   <figure>
     <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
     <figcaption>
@@ -894,7 +894,7 @@ Livre 53
   </figure>
   -->
 
-    <!--Livre 55
+  <!--Livre 55
   <figure>
     <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
     <figcaption>
@@ -909,7 +909,7 @@ Livre 53
   </figure>
 -->
 
-    <!--Livre 56
+  <!--Livre 56
   <figure>
     <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
     <figcaption>
@@ -925,7 +925,7 @@ Livre 53
 </div>
 -->
 
-    <!--  <div class="booksLine">
+  <!--  <div class="booksLine">
 Livre 57
   <figure>
     <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
@@ -942,7 +942,7 @@ Livre 57
   </figure>
   -->
 
-    <!--Livre 58
+  <!--Livre 58
   <figure>
     <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
     <figcaption>
@@ -957,7 +957,7 @@ Livre 57
   </figure>
   -->
 
-    <!--Livre 59
+  <!--Livre 59
   <figure>
     <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
     <figcaption>
@@ -972,7 +972,7 @@ Livre 57
   </figure>
 -->
 
-    <!--Livre 60
+  <!--Livre 60
   <figure>
     <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
     <figcaption>
