--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -23,13 +23,16 @@
   <div class="gamesLine">
     <!--Jeu 1-->
     <figure>
-      <a href="https://www.amazon.fr/Codemasters-F1-2019-EDITION-LEGENDES/dp/B07RCV5T9R/ref=cm_cr_arp_d_product_top?ie=UTF8" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61Gw-F-rCIL._SL1000_.jpg" alt="F1 2019"
-          class="game" /></a>
+      <a href="https://www.amazon.fr/Square-Enix-SQEA27-UK-22ST-Just-Cause/dp/B07DNY1KPK/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=just+cause+4&qid=1556021586&s=videogames&sr=1-2" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
       <figcaption>
-        F1 2019 - Edition Légendes
+        Just cause 4
       </figcaption>
       <figcaption>
-        70,90€ sur Amazon
+        26,49€ sur Amazon
+      </figcaption>
+      <figcaption>
+        69,99€ sur PlayStation
       </figcaption>
     </figure>
 
@@ -92,7 +95,7 @@
       </figcaption>
     </figure>
 
-    <!--Jeu 6-->
+    <!--Jeu 6
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-SQEA27-UK-22ST-Just-Cause/dp/B07DNY1KPK/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=just+cause+4&qid=1556021586&s=videogames&sr=1-2" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
@@ -105,7 +108,7 @@
       <figcaption>
         69,99€ sur PlayStation
       </figcaption>
-    </figure>
+    </figure>-->
 
     <!--Jeu 7
     <figure>
@@ -140,8 +143,8 @@
     </figure>
   </div>-->
 
-  <div class="gamesLine">
-    <!--Jeu 9
+    <div class="gamesLine">
+      <!--Jeu 9
     <figure>
       <a href="https://www.amazon.fr/Square-Enix-SQEA27-UK-22ST-Just-Cause/dp/B07DNY1KPK/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=just+cause+4&qid=1556021586&s=videogames&sr=1-2" target="_blank"> <img
           src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
@@ -156,7 +159,7 @@
       </figcaption>
     </figure>-->
 
-    <!--Jeu 10
+      <!--Jeu 10
     <figure>
       <a href="#" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71qbzh%2BrMJL._SL1000_.jpg" alt="Crash Team Racing Nitro-Fueled" class="game" /></a>
       <figcaption>
@@ -170,7 +173,7 @@
       </figcaption>
     </figure>-->
 
-    <!--Jeu 11
+      <!--Jeu 11
     <figure>
       <a href="https://www.amazon.fr/Codemasters-F1-2019-EDITION-LEGENDES/dp/B07RCV5T9R/ref=cm_cr_arp_d_product_top?ie=UTF8" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/61Gw-F-rCIL._SL1000_.jpg" alt="F1 2019"
           class="game" /></a>
@@ -182,7 +185,7 @@
       </figcaption>
     </figure>-->
 
-    <!--Jeu 12
+      <!--Jeu 12
     <figure>
       <a href="#" target="_blank"> <img
           src="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwijlfSg9JPjAhXSLVAKHeA8BHAQjRx6BAgBEAU&url=https%3A%2F%2F2kgamer.com%2Ft%2Fwho-do-you-think-will-be-the-nba-2k20-cover-athlete%2F45722%3Fpage%3D2&psig=AOvVaw3QDBpeCAuvrOn-ofckaKga&ust=1562076940391318"
@@ -194,9 +197,9 @@
         99,99€ sur PlayStation
       </figcaption>
     </figure>-->
-  </div>
+    </div>
 
-  <!--  <div class="gamesLine">
+    <!--  <div class="gamesLine">
 Jeu 13
 <figure>
   <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
@@ -208,7 +211,7 @@ Jeu 13
   </figcaption>
 </figure>
 -->
-  <!--Jeu 14
+    <!--Jeu 14
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -219,7 +222,7 @@ Jeu 13
     </figcaption>
   </figure>
 -->
-  <!--Jeu 15
+    <!--Jeu 15
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -230,7 +233,7 @@ Jeu 13
     </figcaption>
   </figure>
 -->
-  <!--Jeu 16
+    <!--Jeu 16
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -242,8 +245,8 @@ Jeu 13
   </figure>
   </div>
 -->
-  <!--<div class="gamesLine">-->
-  <!--Jeu 17
+    <!--<div class="gamesLine">-->
+    <!--Jeu 17
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -254,7 +257,7 @@ Jeu 13
     </figcaption>
   </figure>
 -->
-  <!--Jeu 18
+    <!--Jeu 18
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -266,7 +269,7 @@ Jeu 13
   </figure>
   -->
 
-  <!--Jeu 19
+    <!--Jeu 19
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -277,7 +280,7 @@ Jeu 13
     </figcaption>
   </figure>
 -->
-  <!--Jeu 20
+    <!--Jeu 20
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -290,8 +293,8 @@ Jeu 13
   </div>
 -->
 
-  <!--<div class="gamesLine">-->
-  <!--Jeu 21
+    <!--<div class="gamesLine">-->
+    <!--Jeu 21
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -302,7 +305,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-  <!--Jeu 22
+    <!--Jeu 22
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -314,7 +317,7 @@ Jeu 13
 </figure>
 -->
 
-  <!--Jeu 23
+    <!--Jeu 23
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -325,7 +328,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-  <!--Jeu 24
+    <!--Jeu 24
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -338,8 +341,8 @@ Jeu 13
 </div>
 -->
 
-  <!--<div class="gamesLine">-->
-  <!--Jeu 25
+    <!--<div class="gamesLine">-->
+    <!--Jeu 25
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -350,7 +353,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-  <!--Jeu 26
+    <!--Jeu 26
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -362,7 +365,7 @@ Jeu 13
 </figure>
 -->
 
-  <!--Jeu 27
+    <!--Jeu 27
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -373,7 +376,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-  <!--Jeu 28
+    <!--Jeu 28
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -386,8 +389,8 @@ Jeu 13
 </div>
 -->
 
-  <!--<div class="gamesLine">-->
-  <!--Jeu 29
+    <!--<div class="gamesLine">-->
+    <!--Jeu 29
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -398,7 +401,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-  <!--Jeu 30
+    <!--Jeu 30
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -410,7 +413,7 @@ Jeu 13
 </figure>
 -->
 
-  <!--Jeu 31
+    <!--Jeu 31
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -421,7 +424,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-  <!--Jeu 32
+    <!--Jeu 32
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -434,8 +437,8 @@ Jeu 13
 </div>
 -->
 
-  <!--<div class="gamesLine">-->
-  <!--Jeu 33
+    <!--<div class="gamesLine">-->
+    <!--Jeu 33
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -446,7 +449,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-  <!--Jeu 34
+    <!--Jeu 34
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -458,7 +461,7 @@ Jeu 13
 </figure>
 -->
 
-  <!--Jeu 35
+    <!--Jeu 35
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -469,7 +472,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-  <!--Jeu 36
+    <!--Jeu 36
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -482,8 +485,8 @@ Jeu 13
 </div>
 -->
 
-  <!--<div class="gamesLine">-->
-  <!--Jeu 37
+    <!--<div class="gamesLine">-->
+    <!--Jeu 37
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -494,7 +497,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-  <!--Jeu 38
+    <!--Jeu 38
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -506,7 +509,7 @@ Jeu 13
 </figure>
 -->
 
-  <!--Jeu 39
+    <!--Jeu 39
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
@@ -517,7 +520,7 @@ Jeu 13
 </figcaption>
 </figure>
 -->
-  <!--Jeu 40
+    <!--Jeu 40
 <figure>
 <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
 <figcaption>
