--- a/autres.html
+++ b/autres.html
@@ -29,7 +29,7 @@
         Maillot Vitality
       </figcaption>
       <figcaption>
-        XXL
+        Rupture de Stock taille
       </figcaption>
       <figcaption>
         Flocage Siamja
@@ -104,7 +104,7 @@
         L'intégrale en Blu-Ray
       </figcaption>
       <figcaption>
-        53,99€
+        59,99€
       </figcaption>
     </figure>
 
@@ -131,7 +131,7 @@
         Blu Ray
       </figcaption>
       <figcaption>
-        11,98€
+        10,98€
       </figcaption>
     </figure>
   </div>
@@ -163,7 +163,7 @@
         Blu Ray
       </figcaption>
       <figcaption>
-        10,99€
+        9,99€
       </figcaption>
     </figure>
 
@@ -175,19 +175,19 @@
         Monopoly GoT
       </figcaption>
       <figcaption>
-        34,99€
+        33,99€
       </figcaption>
     </figure>
 
     <!--Autres 12-->
     <figure>
-      <a href="https://shop.wwe.com/alexa-bliss-twisted-bliss-coffee-mug/116302345.html?dwvar_116302345_color=White#start=4" target="_blank"> <img
+      <a href="https://shop.wwe.com/alexa-bliss-twisted-bliss-15-oz.-mug/220715CB59.html?dwvar_220715CB59_color=No%20Color#pagesize=78&start=21" target="_blank"> <img
           src="https://shop.wwe.com/on/demandware.static/-/Sites-main/default/dw88bc650a/images/large/e6ec192d2dccb8461b0ee59381ffbde7mockup-61c99c26.jpg" alt="Mug Alexa Bliss" class="others" /></a>
       <figcaption>
         Mug Alexa Bliss
       </figcaption>
       <figcaption>
-        18,26€
+        14,62€
       </figcaption>
       <figcaption>
         wwe.com (USA)
