--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -29,7 +29,7 @@
         Just cause 4
       </figcaption>
       <figcaption>
-        26,49€ sur Amazon
+        25,99€ sur Amazon
       </figcaption>
       <figcaption>
         69,99€ sur PlayStation
@@ -58,10 +58,10 @@
         Shadow of the Tomb Raider
       </figcaption>
       <figcaption>
-        26,30€ sur Amazon
+        29,37€ sur Amazon
       </figcaption>
       <figcaption>
-        69,99€ sur PlayStation
+        26,39€ (edition deluxe) sur PlayStation
       </figcaption>
     </figure>
 
