--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     Mise à jour liste le 12 août 2019
   </p>
   <p class="dateMAJ2">
-    Mise à jour prix le 27 juin 2019
+    Mise à jour prix le 13 août 2019
   </p>
 
 </body>
